force-app/main/default/objects/Response__c/Response__c.object-meta.xml
<CustomObject>
    <description>A Talent&apos;s responses to Pre-Screening questions, collected over time. These may be related to a specific Job Order or collected generally during research or normal conversation.</description>
    <label>Response</label>
    <nameField>
        <displayFormat>RES-{000000000}</displayFormat>
        <label>Response ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>