force-app/main/default/objects/Response__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>TR1__Application__c</referenceTo>
    <relationshipLabel>Application Responses</relationshipLabel>
    <relationshipName>ApplicationResponses</relationshipName>
    <type>Lookup</type>
</CustomField>