force-app/main/default/objects/Response__c/fields/ApplicationID__c.field-meta.xml
<CustomField>
    <fullName>ApplicationID__c</fullName>
    <label>Application ID</label>
    <referenceTo>TR1__Application_V2__c</referenceTo>
    <relationshipLabel>Responses</relationshipLabel>
    <relationshipName>Responses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>