force-app/main/default/objects/Response__c/fields/ChatbotTimestamp__c.field-meta.xml
<CustomField>
    <fullName>ChatbotTimestamp__c</fullName>
    <description>Captures when the Chatbot sent a Prompt to the user so that Questions/Responses can be ordered.</description>
    <label>Chatbot Timestamp</label>
    <type>DateTime</type>
</CustomField>