force-app/main/default/objects/Response__c/fields/FreeFormTextResponse__c.field-meta.xml
<CustomField>
    <fullName>FreeFormTextResponse__c</fullName>
    <description>The Applicant&apos;s response in the form of a Checkbox, free text, a picklist selection, or date</description>
    <label>Free Form Text Response</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>