force-app/main/default/objects/Response__c/fields/JobQuestion__c.field-meta.xml
<CustomField>
    <fullName>JobQuestion__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The parent Question, ensuring the Response has proper context. Also provides knowledge of the Job Order itself</description>
    <label>Job Question</label>
    <referenceTo>Question__c</referenceTo>
    <relationshipLabel>Responses (Job Question)</relationshipLabel>
    <relationshipName>JobResponses</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>