force-app/main/default/objects/Response__c/fields/KnockOutTriggered__c.field-meta.xml
<CustomField>
    <fullName>KnockOutTriggered__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True whenever a Knock Out Condition has been met. Can be set by the Chatbot or whenever a Response is Updated. An Applicant is considered &quot;Knocked Out&quot; if one or more individual Question/Response(s) are &quot;Knock Out Triggered&quot;.</description>
    <label>Knock Out Triggered</label>
    <type>Checkbox</type>
</CustomField>