force-app/main/default/objects/Response__c/fields/MergeField__c.field-meta.xml
<CustomField>
    <fullName>MergeField__c</fullName>
    <description>Stores any dynamic variables&apos; values at the time the Response is created</description>
    <label>Merge Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>