force-app/main/default/objects/Response__c/fields/Response__c.field-meta.xml
<CustomField>
    <fullName>Response__c</fullName>
    <description>The Applicant&apos;s response in the form of a Checkbox, free text, a picklist selection, or date</description>
    <label>Response</label>
    <length>255</length>
    <type>Text</type>
</CustomField>