force-app/main/default/objects/Response__c/fields/ResponseType__c.field-meta.xml
<CustomField>
    <fullName>ResponseType__c</fullName>
    <description>Describes how the Response should be presented to the User. eg. a &quot;Yes/No&quot; Response Type could present a Response of &quot;Yes&quot; as a [Checked Checkbox] instead of simple text.</description>
    <formula>TEXT(JobQuestion__r.ResponseType__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ResponseType</label>
    <type>Text</type>
</CustomField>